--- a/examples/example3b-多行表头.html
+++ b/examples/example3b-多行表头.html
@@ -38,7 +38,7 @@
     </div>
 
     <!-- <script src="../lib/firebugx.js"></script> -->
-
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
     <script src="../lib/jquery-1.7.min.js"></script>
     <script src="../lib/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="../lib/jquery.event.drag-2.2.js"></script>
@@ -65,7 +65,7 @@ var columns = [
   {id: "desc1", name: "star", field: "description1", width: 100, editor: Slick.Editors.LongText, sortable: true},
   {id: "desc2", name: "job", field: "description2", width: 100, editor: Slick.Editors.LongText, sortable: true},
   {id: "desc3", name: "life", field: "description3", width: 100, editor: Slick.Editors.LongText, sortable: true},
-  {id: "desc4", name: "sex", field: "description4", width: 100, editor: Slick.Editors.LongText, sortable: true},
+  {id: "desc4", name: "第一行文本<br>第二行文本<br/>第三行文本", field: "description4", width: 100, editor: Slick.Editors.LongText, sortable: true},
   {id: "desc5", name: "money", field: "description5", width: 100, editor: Slick.Editors.LongText, sortable: true},
   {id: "desc6", name: "wise", field: "description6", width: 100, editor: Slick.Editors.LongText, sortable: true},
   {id: "desc7", name: "old", field: "description7", width: 100, editor: Slick.Editors.LongText, sortable: true},
